@@ -717,7 +717,9 @@ HTML_FOOTER            = @top_srcdir@/doc/footer.html
 # the style sheet file to the HTML output directory, so don't put your own
 # stylesheet in the HTML output directory as well, or it will be erased!
 
-HTML_STYLESHEET        = @top_srcdir@/doc/package.css
+HTML_STYLESHEET        = @top_srcdir@/doc/package.css \
+                         @top_srcdir@/doc/doxygen.css \
+                         @top_srcdir@/doc/tabs.css
 
 # If the HTML_ALIGN_MEMBERS tag is set to YES, the members of classes,
 # files or namespaces will be aligned in HTML using tables. If set to
@@ -1178,7 +1180,7 @@ CLASS_GRAPH            = YES
 # indirect implementation dependencies (inheritance, containment, and
 # class references variables) of the class with other documented classes.
 
-COLLABORATION_GRAPH    = YES
+COLLABORATION_GRAPH    = NO
 
 # If the GROUP_GRAPHS and HAVE_DOT tags are set to YES then doxygen
 # will generate a graph for groups, showing the direct groups dependencies
